--- a/aggregator.conf
+++ b/aggregator.conf
@@ -1,6 +1,6 @@
 [SERVICE]
     daemon false
-    log_level debug
+    log_level trace
     storage.path /fluent-bit/data
     storage.sync full
     storage.backlog.mem_limit 128M
@@ -13,8 +13,10 @@
 
 [INPUT]
     name forward
-    listen 0.0.0.0
-    port 24224
+    #listen 0.0.0.0
+    #port 24224
+    unix_path  /var/sock/fluentbit.sock
+    unix_perm  777
     buffer_chunk_size 1M
     buffer_max_size 4M
     storage.type filesystem
